--- a/web/widget-front/WidGet.html
+++ b/web/widget-front/WidGet.html
@@ -12,11 +12,11 @@
                 </div>
                 <span class="robax-widget-menu-button-text"><{menu.phone-text}></span>
             </div>
-            <div class="robax-menu-button" data-target=".robax-widget-msg">
+            <!--<div class="robax-menu-button" data-target=".robax-widget-msg">
                 <div class="robax-widget-menu-button-img msg">
                 </div>
                 <span class="robax-widget-menu-button-text"><{menu.msg-text}></span>
-            </div>
+            </div>-->
             <div class="robax-menu-button" data-target=".robax-widget-mail">
                 <div class="robax-widget-menu-button-img mail">
                 </div>
