--- a/web/widget-front/WidGet.html
+++ b/web/widget-front/WidGet.html
@@ -81,6 +81,7 @@
                         </div>
                     </div>
                     <input class="robax-phone-input" type="text" placeholder="+7(___)___-__-__">
+                    <input type="text" hidden id="megaEvent" value="" />
                 </div>
                 <div class="robax-widget-item-button">
                     <{buttons.post}>
