--- a/web/widget-front/WidGet.html
+++ b/web/widget-front/WidGet.html
@@ -1,7 +1,7 @@
 <div class="robax-widget-body">
     <div class="overlay"></div>
     <div class="robax-widget-open-button" id="open-button" style="<{position}>">
-        <img src="http://test-robax.oblax.ru/widget-front/img/phone-icon.png" class="phone">
+        <img src="http://robax.dev/widget-front/img/phone-icon.png" class="phone">
     </div>
     <div class="robax-widget">
         <div class="robax-arrow"><div class="robax-arrow-wrapper"><div class="robax-arrow-part"></div><div class="robax-arrow-part cbh-bottom"></div></div></div>
@@ -37,51 +37,33 @@
                     <input type="hidden" class="robax-later-data" value="false" />
                     <div class="robax-later__day">
                         <input type="hidden" class="robax-later-data-day" value="today" />
-                        <span class="robax-later__day-val ng-binding"><{date.today}></span>
-                        <div class="robax-later-sel cbh-hide" id="cbh_timer_sel_day">
-                            <ul class="robax-later-sel__hold robax-later-sel__hold__day">
-                                <li data-day="today"><{date.today}></li>
-                                <li data-day="tomorrow"><{date.tomorrow}></li>
-                                <li data-day="after-tomorrow"><{date.after-tomorrow}></li>
-                            </ul>
-                        </div>
+                        <button class="robax-later__day-val ng-binding button-wg" type="button" id="dropdownMenuDay" onclick="openDropDown($(this))"><{date.today}></button>
+                        <ul style="min-width: 108px;" class="dropdown-menu robax-later-sel__hold robax-later-sel__hold__day" aria-labelledby="dropdownMenuDay">
+                            <li data-day="today"><{date.today}></li>
+                            <li data-day="tomorrow"><{date.tomorrow}></li>
+                            <li data-day="after-tomorrow"><{date.after-tomorrow}></li>
+                        </ul>
                     </div>
                     <span class="robax-later__sep">в</span>
                     <div class="robax-later__hour">
                         <input type="hidden" class="robax-later-data-hour" />
-                        <span class="robax-later__hour-val ng-binding">17:30</span>
-                        <div class="robax-later-sel cbh-hide"  id="cbh_timer_sel_hour">
-                            <ul class="robax-later-sel__hold robax-later-sel__hold__hour">
-                                <li><span>17:30</span></li>
-                                <li><span>17:45</span></li>
-                                <li><span>18:00</span></li>
-                                <li><span>19:00</span></li>
-                                <li><span>20:00</span></li>
-                            </ul>
-                        </div>
+                        <button class="robax-later__hour-val ng-binding button-wg" type="button" id="dropdownMenuTime" onclick="openDropDown($(this))">17:30</button>
+                        <ul style="min-width: 108px;" class="dropdown-menu robax-later-sel__hold robax-later-sel__hold__hour" aria-labelledby="dropdownMenuTime">
+                        </ul>
                     </div>
                 </div>
-                <div class="robax-widget-phone-form">
-                    <div class="robax-country-box">
-                        <i class="robax-flag ru"></i>
-                        <i>▼</i>
-                        <div class="robax-phone-type-list">
-                            <!--<div class="robax-phone-type-list-item" data-placeholder="+375(___)___-__-__" data-mask="+375(999)999-99-99">
-                                <i class="robax-flag by"></i><{phone.phone-type.by}>
-                            </div>
-                            <div class="robax-phone-type-list-item" data-placeholder="+380(___)___-__-__" data-mask="+380(999)999-99-99">
-                                <i class="robax-flag ua"></i><{phone.phone-type.ua}>
-                            </div>
-                            <div class="robax-phone-type-list-item" data-placeholder="+1(___)___-__-__" data-mask="+1(999)999-99-99">
-                                <i class="robax-flag us"></i><{phone.phone-type.us}>
-                            </div>-->
-                            <div class="robax-phone-type-list-item" data-placeholder="+7(___)___-__-__" data-mask="+7(999)999-99-99">
-                                <i class="robax-flag ru"></i><{phone.phone-type.ru}>
-                            </div>
-                        </div>
-                    </div>
-                    <input class="robax-phone-input" type="text" placeholder="+7(___)___-__-__">
-                    <input type="text" hidden id="megaEvent" value="" />
+                <div class="robax-widget-phone-form" style="position: relative">
+                    <input class="robax-phone-input" type="text" placeholder="+7(___)___-__-__" autocomplete="off">
+                    <button class="flag-select" type="button" id="dropdownMenuLanguage" onclick="openDropDown($(this))">
+                        <i class="glyphicon bfh-flag-RU"></i><span class="caret"></span>
+                    </button>
+                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuLanguage">
+                        <li onclick="countryChange('RU', $(this), '.robax-phone-input');"><i class="glyphicon bfh-flag-RU"></i> Россия</li>
+                        <li onclick="countryChange('BY', $(this), '.robax-phone-input');"><i class="glyphicon bfh-flag-BY"></i> Белорусия</li>
+                        <li onclick="countryChange('UA', $(this), '.robax-phone-input');"><i class="glyphicon bfh-flag-UA"></i> Украина</li>
+                        <li onclick="countryChange('US', $(this), '.robax-phone-input');"><i class="glyphicon bfh-flag-US"></i> США</li>
+                    </ul>
+                    <input class="" type="text" hidden id="megaEvent"/>
                 </div>
                 <div class="robax-widget-item-button">
                     <{buttons.post}>
