--- a/web/widget-front/WidGet.html
+++ b/web/widget-front/WidGet.html
@@ -1,6 +1,6 @@
 <div class="robax-widget-body">
     <div class="overlay"></div>
-    <div class="robax-widget-open-button" id="open-button" style="<{position}>">
+    <div class="robax-widget-open-button" id="open-button" style="border-radius: 100%;<{position}>">
         <img src="http://r.oblax.ru/widget-front/img/phone-icon.png" class="phone">
     </div>
     <div class="robax-widget">
